k8s/kyverno-test-bad-runtimeclass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kyverno-test-bad-runtimeclass
  labels:
    app: pr-sandbox
spec:
  containers:
    - name: test
      image: us-central1-docker.pkg.dev/securepr-505401/pr-sandbox-repo/pr-sandbox:v2
      command: ["sleep", "60"]
