k8s/temporal-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-server
  template:
    metadata:
      labels:
        app: temporal-server
    spec:
      serviceAccountName: temporal-server-ksa
      containers:
        - name: temporal
          image: temporalio/auto-setup:1.24.2
          ports:
            - containerPort: 7233
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.0
          args:
            - "--port=5432"
            - "securepr-505401:us-central1:temporal-db"
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-server
spec:
  selector:
    app: temporal-server
  ports:
    - port: 7233
      targetPort: 7233
